# tf_bag

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/: tf_bag.py
tests/: test_tfbag.py
tests/resource/: rosbagFrankaPanda.bag
tests/resource/rosbagFrankaPandaRos2.bag/: metadata.yaml  rosbagFrankaPandaRos2.bag.db3
tf_bag/: BagTfTransformer.py  __init__.py
