<?xml version="1.0"?>
<package format="2">
    <name>tf_bag</name>
    <version>0.1.0</version>
    <description>Utilities to transparently use tf data recorded with rosbag</description>

    <maintainer email="esposito@imfusion.com">Marco Esposito</maintainer>

    <license>LGPLv3</license>

    <!-- <url type="website">http://wiki.ros.org/tf_bag</url> -->

    <author email="esposito@imfusion.com">Marco Esposito</author>

    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>rosbag</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>python-numpy</exec_depend>

    <export>
    </export>
</package>
